# Otel-traces

./: .gitignore  README.md  __init__.py  demo.py  oracle_monitor.py  pyproject.toml  requirements.txt
.agent/skills/oracle-monitor/: SKILL.md
.cursor/: mcp.json
docker/: Dockerfile.api  Dockerfile.demo
k8s/: agents-sample.yaml  deployment.yaml  kind-config.yaml  rbac.yaml
multi_agent_telemetry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: continuous_load.sh  setup.sh
src/agents/: emit_telemetry.py  multi_agent_system.py
src/api/: service.py
src/dashboard/: index.html
src/mcp/: __init__.py  server.py
src/oracle/: __init__.py  cli.py  state_aggregator.py  state_schema.py
src/telemetry/: __init__.py  claude_integration.py  collector.py  litellm_integration.py  otlp_exporter.py  sampling.py  schemas.py
